# yellowfin

./: .gitignore  AUTHORS  README.md  _palette.scss  bootstrap.sh  debug_palette.scss  meson.build  meson_options.txt  render-symbolic-icons.sh
DEBIAN/: control  copyright  postinst  preinst  prerm  rules
gnome-shell/src/: README.md  meson.build
gnome-shell/src/data/: gnome-shell-theme.gresource.xml
gnome-shell/src/gnome-shell-sass/: _common.scss  _dock.scss  _palette.scss
gnome-shell/src/gnome-shell-sass/widgets/: _app-grid.scss  _calendar.scss  _dash.scss  _keyboard.scss  _login-dialog.scss  _looking-glass.scss  _message-list.scss  _osd.scss  _panel.scss  _screen-shield.scss  _search-entry.scss  _search-results.scss  _switcher-popup.scss  _window-picker.scss  _workspace-thumbnails.scss
gnome-shell/upstream/: meson.build
gnome-shell/upstream/gnome-shell-sass/: _common.scss
gnome-shell/upstream/gnome-shell-sass/widgets/: _app-grid.scss  _calendar.scss  _dash.scss  _keyboard.scss  _login-dialog.scss  _looking-glass.scss  _message-list.scss  _network-dialog.scss  _osd.scss  _panel.scss  _switcher-popup.scss  _window-picker.scss  _workspace-switcher.scss  _workspace-thumbnails.scss
gtk/src/: meson.build
gtk/src/default/gtk-3.0/: _drawing.scss
gtk/src/default/gtk-3.20/: _palette.scss  _tweaks.scss
gtk/upstream/gtk+3.0/Adwaita/: parse-sass.sh
gtk/upstream/libhandy/themes/: parse-sass.sh
gtksourceview/src/: dark.xml.in  light.xml.in  meson.build
icons/: meson.build
icons/src/symlinks/symbolic/: places.list
sessions/: THEMENAME.gschema.override.in  meson.build
sounds/: meson.build
